--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.14.3",
     "@babel/plugin-transform-react-jsx": "^7.14.3",
     "autoprefixer": "^10.2.6",
+    "date-fns": "^2.22.1",
     "postcss-loader": "^5.3.0",
     "prompt-sync": "^4.2.0",
     "sass-loader": "^11.1.1",
